ТЗ 8, исправил замечания